# BiOCamLib

./: .gitignore  BUILD  README.css  README.md  dune-project
docs/: README.css
lib/: Annotations.ml  Annotations_Base.ml  Annotations_Lex.mll  Annotations_Parse.mly  Better.ml  Consensus.ml  Files.ml  KMer.ml  KMers.ml  Matrix.ml  Numbers.ml  Processes.ml  Sequences.ml  Tools.ml  Trees.ml  Trees_Base.ml  Trees_Lex.mll  Trees_Parse.mly  dune
test/: Annotations.ml  Trees.ml  Trie.ml  Vectors.ml  annotation_demo.gb  annotation_demo.gff3  annotation_demo.gtf  dune  phylo_tb_truth.nwk
